kubernetes/1-deployment-apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: front-obligatorio-tecredsw
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 1
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: desmoris/apache-obligatorio-tecredsw-2025
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-config
              mountPath: /var/www/html/config/constants.json
              subPath: constants.json
      volumes:
      - name: frontend-config
        configMap:
          name: frontend-config
