kubernetes/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: front-obligatorio-tecredsw
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000
  type: NodePort
